@@ -45,11 +45,3 @@
 	- Validate all Webmin modules
 	- SMART module
 	- See email from Richard A Secor
- 
- - Option to exit with status 75 in lookup-domain
-	- https://www.virtualmin.com/node/25381
-
- - Change folder names to Trash/Sent/Junk/Drafts
-	- https://www.virtualmin.com/node/25388
-	- Ensure that this does't break existing settings for spam / virus
-	- UI
