@@ -4351,6 +4351,9 @@ spam_procmail=Allow mailbox users to create mail filters?
 spam_trap=Create <tt>spamtrap</tt> and <tt>hamtrap</tt> email aliases?
 spam_trapcannot=Not available, as conflicting aliases exist
 spam_prov=Cloudmin Services system $1
+spam_exitcode=When an over-quote user receives email
+spam_bounce=Bounce back to sender
+spam_queue=Queue for later delivery
 
 cat_objects=Server Objects
 cat_server=Server Configuration
