@@ -1392,3 +1392,4 @@ Plugin modules available to domain owners can now be configured at the template 
 When the contact email address for a domain is changed, default mail aliases like postmaster will be updated to the new address.
 When DNS records are modified in a virtual server, all records are synchronized into any alias domains.
 Changed the default email folder names to Junk, Trash, Drafts, Sent and Virus.
+Added an option to the Spam and Virus Scanning page to control what happens when email is sent to a mailbox that is over quota (bouncing or queueing for later).
